--- a/css/creative.css
+++ b/css/creative.css
@@ -16,7 +16,7 @@ body {
 
 hr {
     max-width: 50px;
-    border-color: #f05f40;
+    border-color: white;
     border-width: 3px;
 }
 
@@ -208,7 +208,7 @@ header .header-content .header-content-inner p {
     margin-bottom: 10px;
     font-size: 16px;
     font-weight: 300;
-    color: rgba(255,255,255,.7);
+    color: white;
 }
 
 @media(min-width:768px) {
@@ -218,7 +218,7 @@ header .header-content .header-content-inner p {
 
     header .header-content {
         position: absolute;
-        top: 50%;
+        top: 48%;
         padding: 0 50px;
         -webkit-transform: translateY(-50%);
         -ms-transform: translateY(-50%);
@@ -248,7 +248,7 @@ header .header-content .header-content-inner p {
 }
 
 .get-in-touch a {
-  color: #4A423F;
+  color: white;
   padding: 20px;
 }
 
